src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>How_Did_You_Hear__c</fullName>
        <label>How Did You Hear</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACRRM Newsletter</fullName>
                </value>
                <value>
                    <fullName>Australian Doctor</fullName>
                </value>
                <value>
                    <fullName>Australian Doctor Magazine</fullName>
                </value>
                <value>
                    <fullName>Australian Family Physician</fullName>
                </value>
                <value>
                    <fullName>College Newsletter</fullName>
                </value>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Colleague Referral</fullName>
                </value>
                <value>
                    <fullName>College or Association</fullName>
                </value>
                <value>
                    <fullName>Direct Email</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Fax News Release</fullName>
                </value>
                <value>
                    <fullName>Friday Facts</fullName>
                </value>
                <value>
                    <fullName>Good Practice</fullName>
                </value>
                <value>
                    <fullName>GP Conference</fullName>
                </value>
                <value>
                    <fullName>GP16 Conference</fullName>
                </value>
                <value>
                    <fullName>Internet Research</fullName>
                </value>
                <value>
                    <fullName>Internet Search</fullName>
                </value>
                <value>
                    <fullName>Journal of Australian Integrative Medicine Ass</fullName>
                </value>
                <value>
                    <fullName>Journal of Complimentary Medicine</fullName>
                </value>
                <value>
                    <fullName>Last Years Courses</fullName>
                </value>
                <value>
                    <fullName>Last Years Workshops</fullName>
                </value>
                <value>
                    <fullName>Medical Observer</fullName>
                </value>
                <value>
                    <fullName>Medical Republic</fullName>
                </value>
                <value>
                    <fullName>Online Ads</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Past Conference</fullName>
                </value>
                <value>
                    <fullName>Previous Course Attendance</fullName>
                </value>
                <value>
                    <fullName>Print Brochure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Know_As__c</fullName>
        <label>Known As</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Like_To_Increase_Your_Skin_Cancer_Work__c</fullName>
        <label>Like To Increase Your Skin Cancer Work</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Like_to_become_Certified_SkinCancer_Dr__c</fullName>
        <label>Like to become Certified SkinCancer Dr</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedIn_ID__c</fullName>
        <label>LinkedIn ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Exchange_Distribution__c</fullName>
        <label>Max Exchange Distribution</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Practice_Name__c</fullName>
        <label>Medical Practice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mesh_block__c</fullName>
        <label>Mesh block</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meshblock__c</fullName>
        <label>Meshblock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoodlePass__c</fullName>
        <label>MoodlePass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoodleUser__c</fullName>
        <label>MoodleUser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moodle_Pass__c</fullName>
        <label>Moodle Pass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moodle_User__c</fullName>
        <label>Moodle User</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name_of_College__c</fullName>
        <label>Name of College</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Marketing__c</fullName>
        <label>Partner Marketing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Persona_Category__c</fullName>
        <label>Persona Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Ambassador</fullName>
                </value>
                <value>
                    <fullName>Beginner</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Description__c</fullName>
        <description>merge with in one field (eg. Ph1desc: Clinic; ph2:mobile)</description>
        <label>Phone Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Education__c</fullName>
        <label>Previous Education</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic Expert in Dermoscopy &amp; Preventive Dermatooncology</fullName>
                </value>
                <value>
                    <fullName>Advanced Skin Cancer Surgery Workshop (Head &amp; Neck)</fullName>
                </value>
                <value>
                    <fullName>Advanced Skin Cancer Surgery Workshop (Nose &amp; Lower Limb)</fullName>
                </value>
                <value>
                    <fullName>An Introduction to Dermoscopy</fullName>
                </value>
                <value>
                    <fullName>Basic Dermoscopy Course</fullName>
                </value>
                <value>
                    <fullName>Certificate in Advanced Dermatoscopy &amp; Histopathology</fullName>
                </value>
                <value>
                    <fullName>Certificate in Primary Care Dermatology</fullName>
                </value>
                <value>
                    <fullName>Certificate in Primary Care Dermatology (RACGP)</fullName>
                </value>
                <value>
                    <fullName>Certificate in Primary Care Skin Cancer Medicine</fullName>
                </value>
                <value>
                    <fullName>Certificate in Primary Care Skin Cancer Surgery</fullName>
                </value>
                <value>
                    <fullName>Certificate in Skin Cancer Therapeutics</fullName>
                </value>
                <value>
                    <fullName>Certificate of Dermoscopy (SCCA)</fullName>
                </value>
                <value>
                    <fullName>Certificate of Skin Cancer Medicine (SCCA)</fullName>
                </value>
                <value>
                    <fullName>Diploma of Dermoscopy (SCCA)</fullName>
                </value>
                <value>
                    <fullName>Diploma of Practical Dermatology</fullName>
                </value>
                <value>
                    <fullName>Diploma of Skin Cancer Medicine &amp; Surgery (SCCA)</fullName>
                </value>
                <value>
                    <fullName>Fellowship (SCCA)</fullName>
                </value>
                <value>
                    <fullName>GP Skin Cancer Workshop</fullName>
                </value>
                <value>
                    <fullName>Graduate Certificate in Medicine (Skin Cancer)</fullName>
                </value>
                <value>
                    <fullName>Master of Medicine (Skin Cancer)</fullName>
                </value>
                <value>
                    <fullName>Master of Science in Dermoscopy (Graz)</fullName>
                </value>
                <value>
                    <fullName>Online Skin Cancer Business Management</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Primary Care Office Procedures Workshops</fullName>
                </value>
                <value>
                    <fullName>Skin Cancer Detection for GPs</fullName>
                </value>
                <value>
                    <fullName>Structural Clinical Attachments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <label>Profession</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Dermatologist</fullName>
                </value>
                <value>
                    <fullName>General Practitioner</fullName>
                </value>
                <value>
                    <fullName>Family Physician</fullName>
                </value>
                <value>
                    <fullName>GP Registrar</fullName>
                </value>
                <value>
                    <fullName>Doctor in Training</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommended_Courses__c</fullName>
        <label>Recommended Courses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SCSUG</fullName>
                </value>
                <value>
                    <fullName>ACDER</fullName>
                </value>
                <value>
                    <fullName>ADERM</fullName>
                </value>
                <value>
                    <fullName>ADSGHN</fullName>
                </value>
                <value>
                    <fullName>ADSGNL</fullName>
                </value>
                <value>
                    <fullName>DIPDER</fullName>
                </value>
                <value>
                    <fullName>GDERM</fullName>
                </value>
                <value>
                    <fullName>PCDER</fullName>
                </value>
                <value>
                    <fullName>PCOP</fullName>
                </value>
                <value>
                    <fullName>SCMED</fullName>
                </value>
                <value>
                    <fullName>SCTIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scholarship_Awarded__c</fullName>
        <label>Scholarship Awarded</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Doctors for Dermoscopy</fullName>
                </value>
                <value>
                    <fullName>Doctors for Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Soucre__c</fullName>
        <label>Soucre</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Database__c</fullName>
        <label>Source Database</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2007 Med-Ed List</fullName>
                </value>
                <value>
                    <fullName>New Rego Click to Enrol</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spoken_With_Advisor__c</fullName>
        <label>Spoken With Advisor?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SrNo__c</fullName>
        <description>storing Serial Number as a DM indentifier</description>
        <label>SrNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StreetLine__c</fullName>
        <label>StreetLine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetTypeFull__c</fullName>
        <label>StreetTypeFull</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetType__c</fullName>
        <label>StreetType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_With_HubSpot__c</fullName>
        <label>Sync With HubSpot</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TESTRYAN__c</fullName>
        <label>TESTRYAN</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Treating_Skin_Cancer__c</fullName>
        <label>Time Spent Treating Skin Cancer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 20%</fullName>
                </value>
                <value>
                    <fullName>20 - 40%</fullName>
                </value>
                <value>
                    <fullName>40 - 60%</fullName>
                </value>
                <value>
                    <fullName>60 - 80%</fullName>
                </value>
                <value>
                    <fullName>80 - 100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_Course_attendee_location__c</fullName>
        <label>US Course attendee location</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEB_ID__c</fullName>
        <label>WEB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Website Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Which_Biopsies_Do_You_Do__c</fullName>
        <label>Which Biopsies Do You Do</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes - Punch &amp; Shave</fullName>
                </value>
                <value>
                    <fullName>Yes - Punch Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_Dermoscopy_Algorithms__c</fullName>
        <label>Which Dermoscopy Algorithms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3 Point Checklist</fullName>
                </value>
                <value>
                    <fullName>7 Point Checklist</fullName>
                </value>
                <value>
                    <fullName>ABCDE</fullName>
                </value>
                <value>
                    <fullName>Chaos &amp; Clues</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pattern Recognition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_NonSurgical_Procedures_Do_You_Do__c</fullName>
        <label>Which Non-Surgical Procedures Do You Do</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aldara</fullName>
                </value>
                <value>
                    <fullName>Curette and Cautery</fullName>
                </value>
                <value>
                    <fullName>Diathermy</fullName>
                </value>
                <value>
                    <fullName>Effudix</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Picato</fullName>
                </value>
                <value>
                    <fullName>PDT</fullName>
                </value>
                <value>
                    <fullName>Topicals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_Surgical_Procedures_Do_You_Perform__c</fullName>
        <label>Which Surgical Procedures Do You Perform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ellipses only</fullName>
                </value>
                <value>
                    <fullName>Flaps &amp; Graft (Head &amp; Neck)</fullName>
                </value>
                <value>
                    <fullName>Flaps &amp; Graft (Nose &amp; Lower Limb)</fullName>
                </value>
                <value>
                    <fullName>Flaps &amp; Grafts</fullName>
                </value>
                <value>
                    <fullName>Flaps and grafts on head, neck, nose and lower limb</fullName>
                </value>
                <value>
                    <fullName>Flaps and grafts on head/neck or on nose/lower limb</fullName>
                </value>
                <value>
                    <fullName>Flaps only</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>datasan__Account_ABN__c</fullName>
        <label>Account ABN</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Billing_Address_Barcode__c</fullName>
        <label>Billing Address Barcode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Billing_Address_Bsp__c</fullName>
        <label>Billing Address Bsp</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Billing_Address_DPID__c</fullName>
        <label>Billing Address DPID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Billing_Address_GNAFConfidence__c</fullName>
        <label>Billing Address GNAFConfidence</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Billing_Address_GNAFGroupPID__c</fullName>
        <label>Billing Address GNAFGroupPID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Billing_Address_GNAFPID__c</fullName>
        <label>Billing Address GNAFPID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Billing_Address_GNAFPointPID__c</fullName>
        <label>Billing Address GNAFPointPID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Billing_Address_GNAFReliability__c</fullName>
        <label>Billing Address GNAFReliability</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Billing_Address_GeocodeLevel__c</fullName>
        <label>Billing Address GeocodeLevel</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Billing_Address_LatLong__c</fullName>
        <label>Billing Address LatLong</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Billing_Address_MeshBlock__c</fullName>
        <label>Billing Address MeshBlock</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Billing_Address_ParcelID__c</fullName>
        <label>Billing Address ParcelID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Billing_Address_SOT__c</fullName>
        <label>Billing Address SOT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUPAF</fullName>
                </value>
                <value>
                    <fullName>GNAF</fullName>
                </value>
                <value>
                    <fullName>AUSOTS</fullName>
                </value>
                <value>
                    <fullName>NZPAF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>datasan__Billing_Address_XYCoordinate__c</fullName>
        <label>Billing Address MapGrid</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__PersonMailing_Address_DPID__c</fullName>
        <label>PersonMailing Address DPID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__PersonOther_Address_DPID__c</fullName>
        <label>PersonOther Address DPID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Shipping_Address_Barcode__c</fullName>
        <label>Shipping Address Barcode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Shipping_Address_Bsp__c</fullName>
        <label>Shipping Address Bsp</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Shipping_Address_DPID__c</fullName>
        <label>Shipping Address DPID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Shipping_Address_GNAFConfidence__c</fullName>
        <label>Shipping Address GNAFConfidence</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Shipping_Address_GNAFGroupPID__c</fullName>
        <label>Shipping Address GNAFGroupPID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Shipping_Address_GNAFPID__c</fullName>
        <label>Shipping Address GNAFPID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Shipping_Address_GNAFPointPID__c</fullName>
        <label>Shipping Address GNAFPointPID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Shipping_Address_GNAFReliability__c</fullName>
        <label>Shipping Address GNAFReliability</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Shipping_Address_GeocodeLevel__c</fullName>
        <label>Shipping Address GeocodeLevel</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Shipping_Address_LatLong__c</fullName>
        <label>Shipping Address LatLong</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Shipping_Address_MeshBlock__c</fullName>
        <label>Shipping Address MeshBlock</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Shipping_Address_ParcelID__c</fullName>
        <label>Shipping Address ParcelID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Shipping_Address_SOT__c</fullName>
        <label>Shipping Address SOT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUPAF</fullName>
                </value>
                <value>
                    <fullName>GNAF</fullName>
                </value>
                <value>
                    <fullName>AUSOTS</fullName>
                </value>
                <value>
                    <fullName>NZPAF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>datasan__Shipping_Address_XYCoordinate__c</fullName>
        <label>Shipping Address MapGrid</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__Hierarchy_Level__c</fullName>
        <formula>IF(ParentId==null,0,1+
IF(Parent.ParentId==null,0,1+
IF(Parent.Parent.ParentId==null,0,1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>HC_Leader__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>DM_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>DM__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <label>DM Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Either_Phone_or_Email_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(Website_Account__c) ,ISBLANK(  Phone),ISBLANK( PersonEmail ))</errorConditionFormula>
        <errorMessage>Please enter email or phone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Website_Account__c ,ISBLANK( PersonEmail ))</errorConditionFormula>
        <errorMessage>Email is mandatory.</errorMessage>
    </validationRules>
</CustomObject>